--- a/cn/core/biology.html
+++ b/cn/core/biology.html
@@ -41,7 +41,7 @@
             <h1>生物</h1>
             <p>灾厄大修重做了大量生物、敌人的行为AI与相关内容</p>
             <div class="weapon-grid">
-                <div class="weapon-item" onclick="location.href='/cn/magazine/magazine.html'">
+                <div class="weapon-item" onclick="location.href='/cn/biology/biology.html'">
                     <div class="image-container">
                         <img src="/asset/other/MachineRebellion.png" alt="MachineRebellion">
                     </div>
