--- a/cn/core/mechanism.html
+++ b/cn/core/mechanism.html
@@ -15,8 +15,7 @@
         <div class="logo">灾厄大修Wiki</div>
         <div class="search-bar">
             <input type="text" id="search" placeholder="搜索..." onclick="performSearch()">
-            <button onclick="searchButton()" id="search-button">搜索</button>
-            <button id="language-button">🌐Switch to English</button>
+            <button onclick="searchButton()" id="search-button">🔍搜索</button>
         </div>
         <div id="search-results">
             <div class="search-result-item"></div>
